// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="sc-iVYMGn OmAfV"
>
  <div
    className="sc-McAUB dBaSyJ"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with different colours 1`] = `
<div
  className="sc-iVYMGn OmAfV"
>
  <div
    className="sc-McAUB dBaSyJ"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-McAUB cgBJyZ"
    color="dodoria.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-McAUB ipdEGJ"
    color="trunks.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-McAUB gedubp"
    color="raditz.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with sizes 1`] = `
<div
  className="sc-iVYMGn OmAfV"
>
  <div
    className="sc-McAUB gA-DnZg"
    size="twoxsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-McAUB bfymyY"
    size="xsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-McAUB eqnByc"
    size="small"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-McAUB dBaSyJ"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-McAUB jNYlAl"
    size="large"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;
